[package]
name = "ccipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.4.1"
